--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "electron": "^12.0.0",
+    "electron": "^13.1.2",
     "electron-devtools-installer": "^3.1.0",
-    "vue-cli-plugin-electron-builder": "~2.0.0"
+    "vue": "^3.0.0",
+    "vue-cli-plugin-electron-builder": "~2.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
