--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@nebrob/event-emitter": "^1.0.9",
     "core-js": "^3.6.5",
     "electron": "^13.1.2",
     "electron-devtools-installer": "^3.1.0",
